<resources>
    <string name="app_name">FoodParcel</string>
    <!-- Name for the navigation drawer items -->
    <string name="drawer_home">Home</string>
    <string name="drawer_logout">Log out</string>
    <string name="drawer_faqs">FAQs</string>
    <string name="drawer_profile">My Profile</string>
    <string name="drawer_favoutire_restaurants">Favourite Restaurants</string>
    <string name="drawer_order_history">Order History</string>

    <!-- Text for default user info in drawer header -->
    <string name="drawer_user_mobile_helper">User Mobile</string>
    <string name="drawer_user_name_helper">User Name</string>

    <!-- For Opening and closing of the drawer -->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- Titles for different fragments -->
    <string name="all_restaurants">All Restaurants</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="order_history">My Previous Orders</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="profile">My Profile</string>

    <!-- Error messages for different purposes -->
    <string name="no_internet_connection_error">Error</string>
    <string name="no_internet_connection_message">No Internet Connection Found. Please connect to the inteernet and re-open the app.</string>
    <string name="retry">Ok</string>

    <!-- Text for different Dialog boxes -->
    <string name="go_to_settings">Go to Settings</string>
    <string name="confirmation">Confirmation</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Text for empty favourite fragment -->
    <string name="you_do_not_have_any_favorite_restaurants">You do not have any favorite restaurants</string>

    <!-- Text for empty order fragment -->
    <string name="you_haven_t_placed_any_order_yet">You haven\'t placed any order yet</string>

    <!-- Default text used in FAQs xml  -->
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sort">Sort</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below :</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="register_user"><u>Don\'t have an account? Sign up now</u></string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_min_characters">Password (Min. 4 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number_">Mobile Number (10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="name_min_characters">Name (Min. 3 characters)</string>
    <string name="register_yourself_toolbar_title">Register Yourself</string>
    <string name="invalid_name_error_message">Invalid Name</string>
    <string name="invalid_mobile_number_error_message">Invalid Mobile number</string>
    <string name="password_length_error_message">Password should be more than or equal 4 digits</string>
    <string name="password_no_match_error_message">Password don\'t match</string>
    <string name="invalid_email_error_message">Invalid Email</string>
    <string name="empty_address_error_message">Address field cannot be empty</string>

    <!-- Preference File Name used to save user profile information -->
    <string name="preference_file_name">User Profile Preferences</string>
    <string name="image">image</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enetr_otp">Enter the received OTP below :</string>
    <string name="enter_otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 Caharcters)</string>
    <string name="new_password_confirm">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="four_character_otp">OTP be mst be of four characters</string>
    <string name="zero">0</string>
    <string name="rs_sample">Rs 40</string>
    <string name="menu_item">Menu Item</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="going_back_menu">Going back will reset cart items. Do you still want to proceed?</string>
    <string name="my_cart">My Cart</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below :</string>
    <string name="search">Search</string>

</resources>