<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activity.ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enetr_otp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/etResetOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="20sp"
        android:maxLength="4"
        android:inputType="number"
        android:hint="@string/enter_otp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/etResetPasswordOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="20sp"
        android:hint="@string/new_password"
        android:padding="10dp"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/etResetPasswordTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="20sp"
        android:hint="@string/new_password_confirm"
        android:padding="10dp"
        android:maxLength="6"
        android:maxLines="1"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:textSize="20sp"
        android:shadowRadius="0"
        android:textAllCaps="false"
        android:textStyle="bold"
        />
</LinearLayout>