<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ai_food_cart"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/etForgotUserMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="20sp"
        android:hint="@string/mobile_number_"
        android:padding="10dp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/etForgotUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="20sp"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email_address"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/btnForgotNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:textSize="20sp"
        android:shadowRadius="0"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

</LinearLayout>