<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llMenuItem"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="4"
        tools:ignore="InvalidId">

        <TextView
            android:id="@+id/tvItemCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/zero"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/menu_item"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemPrice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/rs_sample"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddRemoveItem"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text=""
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</RelativeLayout>