<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ai_food_cart" />

        <EditText
            android:id="@+id/etUserMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="5dp"
            android:inputType="phone"
            android:hint="@string/mobile_number_"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="Password"
            android:maxLines="1"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:textSize="20sp"
            android:shadowRadius="0"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/register_user"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"/>


</RelativeLayout>